tests/ui/overflow.rs
use monostate::MustBe;

fn main() {
    let _ = MustBe!(1000u8);
}
